﻿Version 0.10

- Fixed error message when dj-import is called without parameter
- Added "importAssembly(assemblyName)" to JavaScript engine to allow importing all types of any .Net assembly
- Added global variables "sender" and "player" to scripting
- Added example script js-sleepers.js to show import of assemblies and access to objects


Version 0.9 - compatible ONLY with A16.3 (b12)

- Updated compatibility to 7DTD A16.3 (b12)
- Replaced dj-power with dj-repair to add other fix tasks in the future.
- Added repair task to restart stopped saving of power and vehicle data (also fixed in A16.3 b7)
- Added repair task to reset locked biome respawn
- Fixed bug that would trigger automatic fixing of power chunks also on unrelated errors
- Fixed error message on import of rotated prefab with /all option
- Fixed occasional error "Could not add newly generated chunk to cache." in dj-regen command


Version 0.8 - compatible ONLY with A16.2 (b7)

- Added command dj-regen to regenerate and redecorate chunks
- Added automatic mode to dj-check-power
- Improved parameter parsing and error messages


Version 0.7 - compatible ONLY with A16.2 (b7)

- Improved dj-import/dj-export command to fully support electricity blocks and wires
- Improved fixing algorithm in dj-check-power command to be more sustainable
- Added checks in dj-check-power to find other power-related corruption problems


Version 0.6 - compatible ONLY with A16.2 (b7)

- Updated compatibility to 7DTD A16.2 (b7)
- Fixed a bug where permissions for script commands could not be set
- Extended dj-check-tripwires to repair ALL power triggers: Switch, PressurePlate, TimerRelay, Motion, TripWire
- Renamed dj-check-tripwires to dj-check-power to reflect the broader usecase
- Added command dj-pos to show exended informaton about current player's position
- Added error checks on all commands


Version 0.5 - compatible ONLY with 7DTD A16.1 (b1)
